--- a/app/src/main/res/layout/group.xml
+++ b/app/src/main/res/layout/group.xml
@@ -129,13 +129,15 @@
 
     <LinearLayout
         android:id="@+id/groupContainer"
-        android:textColor="#FFFFFF"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="582dp"
         android:layout_below="@id/back_button"
+        android:layout_marginTop="77dp"
         android:backgroundTint="#354C61"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="52dp"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
 </RelativeLayout>
