--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -65,9 +65,9 @@
         android:id="@+id/add_group_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="204dp"
-        android:text="Add Group"
+        android:layout_marginBottom="104dp"
         android:backgroundTint="#354C61"
+        android:text="Add Group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,8 +75,8 @@
 
     <TextView
         android:id="@+id/total_amount"
-        android:layout_width="210dp"
-        android:layout_height="59dp"
+        android:layout_width="192dp"
+        android:layout_height="26dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="29dp"
         android:fontFamily="sans-serif-black"
@@ -100,7 +100,7 @@
         android:textColor="#FF0000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/total_amount"
-        app:layout_constraintHorizontal_bias="0.567"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/total_amount"
         app:layout_constraintTop_toBottomOf="@+id/total_amount" />
 
@@ -171,32 +171,30 @@
 
     <LinearLayout
         android:id="@+id/group_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="1dp"
         android:backgroundTint="#354C61"
-        android:layout_width="351dp"
-        android:layout_height="214dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="275dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="59dp"
+        android:gravity="center"
         android:orientation="vertical"
         android:padding="16dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/add_group_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-<!--        <ScrollView-->
-<!--            android:id="@+id/group_scroll_view"-->
-<!--            android:layout_width="302dp"-->
-<!--            android:layout_height="300dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            android:layout_marginEnd="14dp"-->
-<!--            android:layout_marginBottom="290dp"-->
-<!--            >-->
+        <!--        <ScrollView-->
+        <!--            android:id="@+id/group_scroll_view"-->
+        <!--            android:layout_width="302dp"-->
+        <!--            android:layout_height="300dp"-->
+        <!--            android:layout_marginStart="16dp"-->
+        <!--            android:layout_marginEnd="14dp"-->
+        <!--            android:layout_marginBottom="290dp"-->
+        <!--            >-->
 
-<!--        </ScrollView>-->
+        <!--        </ScrollView>-->
     </LinearLayout>
 
     <!--    <TextView-->
