--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -73,20 +73,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_container" />
 
+
     <TextView
         android:id="@+id/total_amount"
-        android:layout_width="192dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="35dp"
+        android:layout_width="190dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="29dp"
         android:fontFamily="sans-serif-black"
         android:text="Total Amount Owed: "
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:gravity="center"
         app:layout_constraintEnd_toStartOf="@+id/menu_button"
         app:layout_constraintStart_toEndOf="@+id/profile_button"
         app:layout_constraintTop_toTopOf="@+id/menu_button" />
-
 
     <TextView
         android:id="@+id/total_amount_value"
