extract string resources

--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="52dp"
         android:background="#0D1B2A"
+        android:contentDescription="@string/backButtonText"
         android:src="@drawable/ic_back_arrow"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/GroupName_label"
@@ -80,7 +81,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="479dp"
         android:backgroundTint="#354C61"
-        android:text="select Group Members"
+        android:text="@string/select_group_members_label"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
