--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -81,7 +81,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="29dp"
         android:fontFamily="sans-serif-black"
-        android:text="Total Amount Owed: "
+        android:text="@string/total_amount_owed_initial_label"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:gravity="center"
@@ -97,7 +97,7 @@
         android:layout_marginEnd="29dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:text="0.00"
+        android:text="@string/zero"
         android:textColor="#FF0000"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/total_amount"
