--- a/app/src/main/res/layout/record_payment.xml
+++ b/app/src/main/res/layout/record_payment.xml
@@ -8,6 +8,7 @@
 
     <ImageView
         android:id="@+id/backButton"
+        android:contentDescription="@string/backButtonText"
         android:layout_width="0dp"
         android:layout_height="24dp"
         android:layout_alignParentStart="true"
@@ -52,7 +53,7 @@
         android:layout_width="282dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
-        android:hint="Enter Payment Amount"
+        android:hint="@string/enter_payment_amount"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/youPaid"
@@ -75,7 +76,7 @@
         android:layout_width="287dp"
         android:layout_height="28dp"
         android:layout_marginStart="8dp"
-        android:hint="Enter Date"
+        android:hint="@string/enter_date"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Date"
@@ -98,7 +99,7 @@
         android:layout_width="281dp"
         android:layout_height="24dp"
         android:layout_marginStart="8dp"
-        android:hint="Enter Notes"
+        android:hint="@string/enter_notes"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addNotes"
