--- a/app/src/main/res/layout/add_group_member.xml
+++ b/app/src/main/res/layout/add_group_member.xml
@@ -62,11 +62,11 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="488dp"
         android:backgroundTint="#354C61"
-        android:text="select Group Members"
+        android:text="@string/select_group_members"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
