--- a/app/src/main/res/layout/app_start.xml
+++ b/app/src/main/res/layout/app_start.xml
@@ -13,21 +13,28 @@
     <ImageView
         android:id="@+id/logoImage"
         android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:contentDescription="App Logo"
-        app:srcCompat="@drawable/square_up_logo_xml"
-        tools:layout_editor_absoluteX="130dp"
-        tools:layout_editor_absoluteY="476dp" />
+        android:layout_height="0dp"
+        android:layout_marginBottom="105dp"
+        android:contentDescription="@string/app_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText"
+        app:srcCompat="@drawable/square_up_logo_xml" />
 
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="296dp"
         android:fontFamily="sans-serif-medium"
-        android:text="SquareUp"
+        android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="60sp"
-        tools:layout_editor_absoluteX="74dp"
-        tools:layout_editor_absoluteY="100dp" />
+        app:layout_constraintBottom_toTopOf="@+id/logoImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
