--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="24dp"
         android:layout_alignParentStart="true"
+        android:contentDescription="@string/backButtonText"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:background="#0D1B2A"
@@ -135,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:backgroundTint="#354C61"
-        android:text="Change password"
+        android:text="@string/change_password_label"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/notifications"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
