--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="49dp"
         android:layout_marginBottom="27dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="SquareUp"
+        android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
         android:backgroundTint="#354C61"
-        android:text="Sign In"
+        android:text="@string/sign_in"
         android:textColorHint="#404040"
         android:textColorLink="#354C61"
         app:layout_constraintBottom_toTopOf="@+id/sign_up"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="134dp"
         android:backgroundTint="#354C61"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginStart="3dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="6dp"
-        android:text="Username:"
+        android:text="@string/username_semicolon"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/username"
@@ -83,7 +83,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="7dp"
-        android:text="Password:"
+        android:text="@string/password_semicolon"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/password"
