--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif-black"
-        android:text="Sign Up"
+        android:text="@string/sign_up_label"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +24,7 @@
 
     <ImageView
         android:id="@+id/backButton"
+        android:contentDescription="@string/backButtonText"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
@@ -50,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="8dp"
-            android:text="Name:"
+            android:text="@string/name_label"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/name"
@@ -70,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Email:"
+            android:text="@string/email_label"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/email"
@@ -90,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Username:"
+            android:text="@string/username_semicolon"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/username"
@@ -110,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Password:"
+            android:text="@string/password_semicolon"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/password"
@@ -130,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Confirm Password:"
+            android:text="@string/confirm_password_semicolon"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/confirm_password"
@@ -151,7 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="78dp"
             android:backgroundTint="#354C61"
-            android:text="Sign Up" />
+            android:text="@string/sign_up_label" />
 
     </LinearLayout>
 
