--- a/app/src/main/res/layout/activity_add_budget_item.xml
+++ b/app/src/main/res/layout/activity_add_budget_item.xml
@@ -8,12 +8,12 @@
     <!-- Back Button -->
     <ImageView
         android:id="@+id/backButton"
-        android:backgroundTint="#354C61"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
-        android:src="@drawable/ic_back_arrow"/>
+        android:backgroundTint="#354C61"
+        android:src="@drawable/ic_back_arrow" />
 
     <!-- Title -->
     <TextView
@@ -23,8 +23,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:text="@string/personal_budgeting_title"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:textSize="24sp" />
 
     <!-- Amount Input Field -->
 
@@ -34,8 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:layout_marginTop="32dp"
-        android:orientation="horizontal"
         android:background="#E0D7EB"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <EditText
@@ -53,7 +53,7 @@
             android:id="@+id/clearAmount"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_clear"/>
+            android:src="@drawable/ic_clear" />
     </LinearLayout>
 
     <!-- Budget Category Input Field -->
@@ -63,8 +63,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/amountInputContainer"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal"
         android:background="#E0D7EB"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <EditText
@@ -72,17 +72,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:hint="@string/budget_category_input"
             android:inputType="text"
             android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            android:background="@android:color/transparent" />
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/clearCategory"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_clear"/>
+            android:src="@drawable/ic_clear" />
     </LinearLayout>
 
     <!-- Add Button -->
@@ -90,15 +90,81 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/categoryInputContainer"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:text="@string/add"
-        android:textColor="#FFFFFF"
         android:backgroundTint="#354C61"
         android:paddingLeft="32dp"
-        android:paddingRight="32dp"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp" />
+        android:paddingRight="32dp"
+        android:paddingBottom="8dp"
+        android:text="@string/Create"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/addButton2"
+        android:layout_width="112dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/addTrans"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="131dp"
+        android:backgroundTint="#354C61"
+        android:paddingLeft="32dp"
+        android:paddingTop="8dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="8dp"
+        android:text="@string/add"
+        android:textColor="#FFFFFF" />
+
+    <Spinner
+        android:id="@+id/addBudg"
+        android:layout_width="344dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/BudgetCat"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="147dp" />
+
+    <Spinner
+        android:id="@+id/addTrans"
+        android:layout_width="308dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/AddtoTrans"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="58dp"
+        android:layout_marginEnd="48dp" />
+
+    <TextView
+        android:id="@+id/BudgetCat"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/addButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="140dp"
+        android:text="@string/budget_category_input"
+        android:textColor="#FFFEFE" />
+
+    <TextView
+        android:id="@+id/AddtoTrans"
+        android:layout_width="118dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/BudgetCat"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="97dp"
+        android:layout_marginEnd="148dp"
+        android:text="@string/add_transaction"
+        android:textColor="#FFFEFE" />
 
 </RelativeLayout>
