--- a/app/src/main/res/layout/add_transaction.xml
+++ b/app/src/main/res/layout/add_transaction.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/addTransaction"
@@ -36,24 +35,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
+
     <TextView
         android:id="@+id/enterDescription_label"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="@string/enter_description"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/enterDescription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addTransaction2" />
 
     <EditText
         android:id="@+id/enterDescription"
-        android:layout_width="224dp"
+        android:layout_width="0dp"
         android:layout_height="59dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/enter_description"
         android:textColor="#FFFFFF"
@@ -61,43 +61,41 @@
         app:layout_constraintStart_toEndOf="@+id/enterDescription_label"
         app:layout_constraintTop_toBottomOf="@+id/addTransaction2" />
 
-    <!-- Amount -->
     <TextView
         android:id="@+id/enterAmount_label"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="@string/enter_amount"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/enterAmount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterDescription" />
 
     <EditText
         android:id="@+id/enterAmount"
-        android:layout_width="227dp"
+        android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/enter_amount"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/enterAmount_label"
         app:layout_constraintTop_toBottomOf="@+id/enterDescription" />
-
     <!-- Budget Tag -->
     <TextView
         android:id="@+id/budgetTag_label"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="@string/budgetTag"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/enterBudgetTag"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterAmount" />
 
@@ -121,14 +119,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="282dp"
+        android:layout_marginBottom="203dp"
         android:text=""
         android:textColor="#FFFFFF"
         android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterBudgetTag" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Group Selection -->
     <TextView
@@ -210,7 +210,20 @@
         android:text="@string/use_camera"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="208dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="179dp"
+        android:text="For Individoul Transaction click equal split "
+        android:textAlignment="center"
+        android:textColor="#FAF8F8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/autofill_message" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
