--- a/app/src/main/res/layout/create_group.xml
+++ b/app/src/main/res/layout/create_group.xml
@@ -8,85 +8,93 @@
     android:background="#0D1B2A"
     android:paddingLeft="@dimen/fragment_horizontal_margin"
     android:paddingTop="@dimen/fragment_vertical_margin"
+    android:gravity="center"
     android:paddingRight="@dimen/fragment_horizontal_margin"
     android:paddingBottom="@dimen/fragment_vertical_margin"
     tools:context=".CreateGroup">
 
+
     <ImageView
         android:id="@+id/backButton"
         android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginBottom="23dp"
         android:background="#0D1B2A"
         android:contentDescription="@string/backButtonText"
+
         android:src="@drawable/ic_back_arrow"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/GroupName_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/GroupName_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="550dp"
         android:text="@string/enter_group_name"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/enterGroupName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/enterGroupName" />
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintBottom_toTopOf="@+id/enterGroupName"
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        tools:layout_editor_absoluteX="16dp" />
 
     <EditText
         android:id="@+id/enterGroupName"
-        android:layout_width="153dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="58dp"
-        android:autofillHints="enter_group_name"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
         android:hint="@string/enter_group_name"
         android:inputType="text"
-        android:selectAllOnFocus="true"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/selectMembers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/GroupName_label"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/CreateGroupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:layout_marginBottom="245dp"
-        android:backgroundTint="#354C61"
-        android:text="@string/create_group"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectMembers" />
-
-    <Button
-        android:id="@+id/selectMembers"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="479dp"
-        android:backgroundTint="#354C61"
-        android:text="@string/select_group_members_label"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/GroupName_label" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingStart="18dp"
+        android:paddingEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enterGroupName">
+
+        <Button
+            android:id="@+id/selectMembers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="125dp"
+            android:backgroundTint="#354C61"
+            android:text="@string/select_group_members_label"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/CreateGroupButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#354C61"
+            android:text="@string/create_group"
+            android:textColor="#FFFFFF"
+            />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
